@@ -160,7 +160,7 @@
       <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.30</version>
+        <version>8.0.33</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -196,7 +196,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.3</version>
         <configuration>
-          <argLine>-Doracle.jdbc.javaNetNio=false</argLine>
+          <argLine>-Doracle.jdbc.javaNetNio=false -XX:+EnableDynamicAgentLoading</argLine>
         </configuration>
       </plugin>
       <plugin>
